--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "fake-api": "json-server -w -p 5555 ./src/api/db.json"
   },
   "dependencies": {
     "bulma": "0.9.3",
